tests/diagnostic_golden/semantic_expr_operands.f
      SUBROUTINE S
      INTEGER I
      I='A'+1
      END
